--- a/main.css
+++ b/main.css
@@ -82,20 +82,46 @@ h1 {
 
 .product {
     background-color: #003655;
-    min-height: 200px;
     width: 100%;
-    border-radius: 15px;
+    min-height: fit-content;
+    padding-top: 10px;
+    padding-bottom: 5%;
+    border-radius: 14%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .product img {
-    width: 100%;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
+    width: 90%;
+    border-radius: 14%;
 }
 
 .product p {
     color: white;
     display: flex;
     align-items: center;
+    justify-content: center;
     margin-left: 10%;
+}
+
+.mainProductCover {
+    height: 100%;
+    border-radius: 10%;
+    border-color: #003655;
+    border-style: solid;
+    border-width: 5px;
+}
+
+.mainProductCoverE {
+    margin-top: 11%;
+    height: 35%;
+    display: flex;
+    justify-content: center;
+}
+
+h2 {
+    font-size: 200%;
+    margin-left: 10%;
+    margin-top: 10%;
 }
