--- a/main.css
+++ b/main.css
@@ -84,7 +84,7 @@ h1 {
     background-color: #003655;
     width: 100%;
     min-height: fit-content;
-    padding-top: 10px;
+    padding-top: 5%;
     padding-bottom: 5%;
     border-radius: 14%;
     display: flex;
@@ -110,7 +110,7 @@ h1 {
     border-radius: 10%;
     border-color: #003655;
     border-style: solid;
-    border-width: 5px;
+    border-width: 8px;
 }
 
 .mainProductCoverE {
@@ -124,4 +124,56 @@ h2 {
     font-size: 200%;
     margin-left: 10%;
     margin-top: 10%;
+}
+
+.buySection {
+    background-color: rgba(236, 236, 236, 0.662);
+    height: 11%;
+    width: 100%;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    bottom: 0;
+    backdrop-filter: blur(3px);
+}
+
+.description {
+    background-color: rgb(230, 230, 230);
+    height: fit-content;
+    width: 76%;
+    padding-left: 5%;
+    padding-bottom: 5%;
+    padding-right: 5%;
+    padding-top: 5%;
+    margin-left: 7%;
+    margin-right: 7%;
+    border-radius: 25px;
+    word-wrap: break-word;
+    margin-bottom: 30%;
+}
+
+.buySection a {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.buy {
+    height: 70%;
+    width: 80%;
+    background-color: #003655;
+    color: white;
+    border: none;
+    border-radius: 22px;
+    font-size: 150%;
+}
+
+.back {
+    position: fixed;
+    left: 15;
+    height: 3.5%;
 }
