--- a/main.css
+++ b/main.css
@@ -177,3 +177,55 @@ h2 {
     left: 15;
     height: 3.5%;
 }
+
+.orderImgE {
+    margin-top: 8%;
+    margin-bottom: 4%;
+    display: flex;
+    justify-content: center;
+}
+
+.orderImg {
+    width: 45%;
+    border-color: #003655;
+    border-width: 15px;
+    border-style: solid;
+    border-radius: 20%;
+}
+
+.information {
+    display: grid;
+    grid-template-columns: 45% 45%;
+    column-gap: 10%;
+    margin-left: 7%;
+    margin-right: 7%;
+}
+
+.information input {
+    width: 100%;
+    height: 195%;
+    border-color: black;
+    border-width: 3px;
+    border-style: solid;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.information p {
+    margin: 10% 5% 10% 5%;
+    display: flex;
+    justify-content: center;
+    color: white;
+}
+
+.bb {
+    margin-top: 27%;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: fit-content;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
