--- a/main.css
+++ b/main.css
@@ -73,16 +73,17 @@ h1 {
 
 .products {
     display: grid;
-    grid-template-columns: auto auto;
-    gap: 20px;
-    padding: 20px;
+    grid-template-columns: 49% 49%;
+    column-gap: 5%;
+    row-gap: 1%;
+    padding: 5%;
     width: 88%;
-    margin: 0 auto;
+    margin: 0;
 }
 
 .product {
     background-color: #003655;
-    width: 100%;
+    width: 93%;
     min-height: fit-content;
     padding-top: 5%;
     padding-bottom: 5%;
@@ -93,16 +94,14 @@ h1 {
 }
 
 .product img {
-    width: 90%;
+    width: 88%;
     border-radius: 14%;
 }
 
-.product p {
-    color: white;
+.products a {
     display: flex;
-    align-items: center;
     justify-content: center;
-    margin-left: 10%;
+    align-items: center;
 }
 
 .mainProductCover {
