--- a/main.css
+++ b/main.css
@@ -283,3 +283,31 @@ h2 {
     border-radius: 25px;
 }
 
+.instagram {
+    background: #8c16db;
+    background: linear-gradient(90deg, rgba(255, 0, 64, 1) 0%, rgba(255, 0, 247, 1) 50%, rgba(140, 22, 219, 1) 100%);
+    height: 11%;
+    width: 88%;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    margin-left: 6%;
+    margin-right: 6%;
+    margin-top: 5%;
+}
+
+.instagram img { 
+    height: 70%;
+    margin-left: 4%;
+}
+
+.instagram p {
+    color: white;
+    font-size: 30px;
+    margin-left: 7%;
+}
+
+.instagramA {
+    width: 88%;
+    text-decoration: none;
+}
