--- a/main.css
+++ b/main.css
@@ -114,6 +114,7 @@ h1 {
 
 .mainProductCoverE {
     margin-top: 11%;
+    margin-bottom: 11%;
     height: 35%;
     display: flex;
     justify-content: center;
@@ -151,6 +152,8 @@ h2 {
     border-radius: 25px;
     word-wrap: break-word;
     margin-bottom: 30%;
+    display: flex;
+    justify-content: center;
 }
 
 .buySection a {
@@ -285,7 +288,7 @@ h2 {
 
 .instagram {
     background: #8c16db;
-    background: linear-gradient(90deg, rgba(255, 0, 64, 1) 0%, rgba(255, 0, 247, 1) 50%, rgba(140, 22, 219, 1) 100%);
+    background: linear-gradient(140deg, rgba(255, 0, 64, 1) 0%, rgba(255, 0, 247, 1) 50%, rgb(176, 22, 219) 100%);
     height: 11%;
     width: 88%;
     border-radius: 20px;
